<resources>
    <string name="app_name">hw</string>
    <string name="working">Working on it…</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="general">General</string>
    <string name="history">History</string>
    <string name="about_us">About us</string>
    <string name="nothing_in_favorites">Nothing in favorites</string>
    <string name="add">Add</string>
    <string name="main_screen">Main Screen</string>
</resources>